--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
                     <tr>
                         <td>1</td>
                         <td>Biglietto aereo</td>
-                        <td>120&#8364</td>
+                        <td>120&#8364;</td>
                     </tr>
                     <tr>
                         <td>1</td>
                         <td>Biglietto aereo</td>
-                        <td>120&#8364</td>
+                        <td>120&#8364;</td>
                     </tr>
                     <tr>
                         <td>1</td>
                         <td>Biglietto aereo</td>
-                        <td>120&#8364</td>
+                        <td>120&#8364;</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <td colspan="2">Totale</td>
-                        <td>360&#8364</td>
+                        <td>360&#8364;</td>
                     </tr>
                 </tfoot>
             </table>
@@ -72,22 +72,29 @@
             <!--Terza sezione con lista non numerata concatenata ad una numerata-->
             <h3>Info utili:</h3>
             <ol>
-                <li>Numeri utili di emergenza</li>
-                <ul>
+                <li>
+                    Numeri utili di emergenza 
+                    <ul>
                     <li><strong>999</strong> - Emergenza</li>
                     <li><strong>101</strong> - Numero polizia</li>
                     <li><strong>111</strong> - Numero assistenza medica</li>
-                </ul>
-                <li>Hotel</li>
-                <ul>
-                    <li><strong>Nome hotel</strong>: Buckingham Palace</li>
-                    <li><strong>Indirizzo hotel</strong>: Wstminster, London SW1A 1AA, Regno Unito</li>
-                </ul>
-                <li>Aereo</li>
-                <ul>
-                    <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
-                    <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heatrow</li>
-                </ul>
+                    </ul>
+                </li>
+                
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong>: Wstminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heatrow</li>
+                    </ul>
+                </li>
             </ol>
         </div>
         <hr>
