--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <!--Seconda sezione con lista non numerata-->
             <h3>Cose da fare</h3>
             <ul>
-                <li>Visitare la Tower of London</li>
-                <li>Visitare Greenwich</li>
-                <li>Ascoltare un artista di strada a Covent Garden</li>
-                <li>Mangiare il tipico Fish and Chips inglese</li>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare Greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
             </ul>
         </div>
         <hr>
